# project-02-causal-inference

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
data/processed/: bayesian_results.json  cate_predictions_sample.csv  causal_ml_results.json
data/raw/: hillstrom.csv
models/: cate_model_mens.pkl  cate_model_womens.pkl
notebooks/: 01_exploration.ipynb  02_bayesian_ab_testing.ipynb  03_causal_ml.ipynb
src/api/: main.py  models.py  preprocessing.py  schemas.py
streamlit/: app.py  utils.py
streamlit/pages/: 1_Exploration.py  2_Bayesian_AB.py  3_CausalML.py  4_Simulateur.py
