[tool.poetry]
name = "causal-inference-platform"
version = "0.1.0"
description = ""
authors = ["Arnaud Raulet <raulet.arnaud@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
jupyterlab = "^4.5.1"
pymc = "^5.27.0"
arviz = "^0.23.0"
scipy = "^1.16.3"
scikit-learn = "^1.6.1"
causalml = "^0.15.1"
shap = "^0.50.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
joblib = "^1.4.0"
streamlit = "^1.41.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
